--- a/src/components/PageHead.astro
+++ b/src/components/PageHead.astro
@@ -7,7 +7,9 @@ interface Props {
 }
 
 const { title = SITE.title, description = SITE.description } = Astro.props
-const image = new URL('/ogImage.png', Astro.site).toString()
+const image = new URL(Astro.url)
+image.pathname = '/ogImage.png'
+const imageUrl = image.toString()
 const posts = await getAllPosts()
 
 // Optimize description for SEO (50-155 chars)
@@ -30,7 +32,7 @@ const pageTitle = rawTitle.length > 60 ? rawTitle.slice(0, 57) + '...' : rawTitl
 <!-- Open Graph Meta Tags -->
 <meta property="og:title" content={title} />
 <meta property="og:description" content={optimizedDescription} />
-<meta property="og:image" content={image} />
+<meta property="og:image" content={imageUrl} />
 <meta property="og:image:alt" content={title} />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -43,7 +45,7 @@ const pageTitle = rawTitle.length > 60 ? rawTitle.slice(0, 57) + '...' : rawTitl
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:description" content={optimizedDescription} />
-<meta name="twitter:image" content={image} />
+<meta name="twitter:image" content={imageUrl} />
 <meta name="twitter:image:alt" content={title} />
 <meta name="twitter:creator" content={`@${SITE.author.replace(' ', '').toLowerCase()}`} />
 <meta name="twitter:site" content={`@${SITE.author.replace(' ', '').toLowerCase()}`} />
